RESOLVED FIXED123161
[WinCairo] Compile error.
https://bugs.webkit.org/show_bug.cgi?id=123161
Summary [WinCairo] Compile error.
peavo
Reported 2013-10-22 07:03:09 PDT
I get the following compile error: webcore\rendering\RenderFlowThread.h(81): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int The type RenderRegionList is undefined.
Attachments
Patch (1.27 KB, patch)
2013-10-22 07:11 PDT, peavo
no flags
peavo
Comment 1 2013-10-22 07:11:49 PDT
Mihnea Ovidenie
Comment 2 2013-10-22 08:22:15 PDT
I believe RenderLayerList definition is used only when ACCELERATED_COMPOSITING is defined, as opposed to RenderRegionList.
Brent Fulgham
Comment 3 2013-10-22 09:47:16 PDT
Comment on attachment 214855 [details] Patch r=me
Mihai Maerean
Comment 4 2013-10-22 09:56:23 PDT
thanks for fixing this.
WebKit Commit Bot
Comment 5 2013-10-22 10:11:21 PDT
Comment on attachment 214855 [details] Patch Clearing flags on attachment: 214855 Committed r157799: <http://trac.webkit.org/changeset/157799>
WebKit Commit Bot
Comment 6 2013-10-22 10:11:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.