[WinCairo] Compile error. https://bugs.webkit.org/show_bug.cgi?id=123161

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-10-22
Reviewed by Brent Fulgham.

* rendering/RenderFlowThread.h: Move USE(ACCELERATED_COMPOSITING) guard to expose needed type.

Canonical link: https://commits.webkit.org/141245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157799 268f45cc-cd09-0410-ab3c-d52691b4dbfc